[gd_scene load_steps=12 format=2]

[ext_resource path="res://units/tomato.png" type="Texture" id=1]
[ext_resource path="res://units/tomato.gd" type="Script" id=2]
[ext_resource path="res://units/select_ring.png" type="Texture" id=3]
[ext_resource path="res://units/tomato_attack.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 38 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 38 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 38 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 38 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 38 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "attack",
"speed": 4.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "move",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=5]
radius = 11.0

[node name="tomato" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 3
script = ExtResource( 2 )

[node name="select_ring" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 14 )
texture = ExtResource( 3 )

[node name="sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 4 )
animation = "idle"
offset = Vector2( 0, -6 )

[node name="collider" type="CollisionShape2D" parent="."]
position = Vector2( 0, 16 )
shape = SubResource( 5 )

[node name="stop_timer" type="Timer" parent="."]
one_shot = true

[node name="rays" type="Node2D" parent="."]
position = Vector2( 0, 16 )

[node name="ray0" type="RayCast2D" parent="rays"]
enabled = true
cast_to = Vector2( 40, 0 )

[node name="raym30" type="RayCast2D" parent="rays"]
rotation = -0.523599
enabled = true
cast_to = Vector2( 40, 0 )

[node name="raym60" type="RayCast2D" parent="rays"]
rotation = -1.0472
enabled = true
cast_to = Vector2( 40, 0 )

[node name="ray30" type="RayCast2D" parent="rays"]
rotation = 0.523599
enabled = true
cast_to = Vector2( 40, 0 )

[node name="ray60" type="RayCast2D" parent="rays"]
rotation = 1.0472
enabled = true
cast_to = Vector2( 40, 0 )
